FIXED: Unworked modal window close button on mobile devices.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -930,7 +930,7 @@ footer p {
    width: 20px;
    height: 20px;
    cursor: pointer;
-
+   z-index: 10001;
 }
 
 h5.modal-title {
